[package]
name = "gw-run-timer"
version = "0.1.0"
edition = "2024"

[lib]
name = "kaos_zone_timer"
crate-type = ["cdylib"]

[dependencies]
hudhook = {
    version = "0.9.1",
    features = [
        "dx9",
        "inject",
        "imgui-tables-api"
    ]
}
rusqlite = { 
    version = "0.40.1", 
    features = ["bundled"] 
}

windows = { 
    version = "0.58", 
    features = [
        "Win32_Foundation",
        "Win32_System_Threading",
        "Win32_System_Diagnostics_ToolHelp",
        "Win32_System_Diagnostics_Debug",
        "Win32_System_Memory",
        "Win32_System_LibraryLoader",
        "Win32_Security",
        "Win32_System_SystemServices",
        "Win32_System_Console",
        "Win32_System_SystemInformation",
        "Win32_UI_WindowsAndMessaging",
        "Win32_UI_Controls",
        "Win32_Graphics_Gdi"
        ] 
}
windows-sys = { 
    version = "0.59", 
    features = ["Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Security"] 
}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"