[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gw-launcher"
path = "src/main.rs"

[dependencies]
native-windows-gui = "1.0"
native-windows-derive = "1.0"

windows = {
    version = "0.58",
    features = [
        "Win32_Foundation",
        "Win32_Security",
        "Win32_System_Threading",
        "Win32_System_Memory",
        "Win32_System_LibraryLoader",
        "Win32_System_Diagnostics_Debug",
        "Win32_System_Diagnostics_ToolHelp",
        "Win32_UI_WindowsAndMessaging",
    ]
}
